--- a/parse_news_headlines.ipynb
+++ b/parse_news_headlines.ipynb
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -88,7 +88,7 @@
     "    WEB_SERVICES = 1                             # - Use geonames web service\n",
     "    LOCAL_DB = 2                                 # - Use local db with geonames data\n",
     "    REGEXP = 3                                   # - Use regexp\n",
-    "location_data = LocationData.WEB_SERVICES        # Selected source of location data\n",
+    "location_data = LocationData.LOCAL_DB        # Selected source of location data\n",
     "\n",
     "#################################################################################\n",
     "# Create a personal user name on geonames to use the web api                    #\n",
@@ -113,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [
     {
@@ -207,13 +207,20 @@
     "###################################################################\n",
     "# Open and Close connections to the local MySQL database          #\n",
     "###################################################################\n",
+    "coonnection = ''\n",
+    "cursor = ''\n",
     "def close_db_connection():\n",
+    "    global connection\n",
+    "    global cursor\n",
     "    if (connection.is_connected()):\n",
+    "        logging.info(\"Closing connection to local MySQL\")\n",
     "        cursor.close()\n",
     "        connection.close()\n",
     "        print(\"MySQL connection closed\")\n",
     "\n",
-    "def open_db_connection()\n",
+    "def open_db_connection():\n",
+    "    global connection\n",
+    "    global cursor\n",
     "    try:\n",
     "        connection = mysql.connector.connect(host     = dbhost,\n",
     "                                             database = dbname,\n",
@@ -221,20 +228,21 @@
     "                                             port     = dbport,\n",
     "                                             password = dbpassword)\n",
     "        if connection.is_connected():\n",
+    "            logging.info(\"Opening connection to local MySQL\")\n",
     "            db_Info = connection.get_server_info()\n",
     "            print(\"Connected to MySQL Server version \", db_Info)\n",
     "            cursor = connection.cursor()\n",
     "            cursor.execute(\"select database();\")\n",
     "            record = cursor.fetchone()\n",
-    "            print(\"You're connected to database: \", record)\n",
-    "\n",
+    "       \n",
+    "        return\n",
+    "        \n",
     "    except Error as e:\n",
     "        print(\"Error while connecting to MySQL\", e)\n",
     "        logging.error(\"Cannot connect to local MySQL: \" + e)\n",
-    "    finally:\n",
     "        if (connection.is_connected()):\n",
     "            close_db_connection()\n",
-    "            logging.error(\"MySQL connection closed\")\n"
+    "            logging.error(\"Finally: MySQL connection closed\")\n"
    ]
   },
   {
@@ -248,37 +256,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "using in\n",
-      "                                        Headlines        Countries  \\\n",
-      "0  [ï»¿More Zika patients reported in Fort Worth]  [United States]   \n",
-      "\n",
-      "         Cities  \n",
-      "0  [Fort Worth]  \n"
+      "Reading lines from ../data/headlines.txt\n",
+      "Connected to MySQL Server version  5.7.21\n",
+      "MySQL connection closed\n",
+      "                                        Headlines   Countries        Cities\n",
+      "0  [ï»¿More Zika patients reported in Fort Worth]  [Zimbabwe]  [Fort Worth]\n"
      ]
     }
    ],
    "source": [
-    "def query_db(name: str):\n",
-    "    sql_select_Query = \"select * from Laptop\"\n",
+    "def query_db(name: str, country_hint):\n",
+    "    global connection\n",
+    "    sql_select_query = \"select g.name, g.latitude, g.longitude, c.name from geoname g inner join countryinfo c on c.iso_alpha2 = g.country where g.name = '\" + name + \"'\"\n",
     "    cursor = connection.cursor()\n",
-    "    cursor.execute(sql_select_Query)\n",
+    "    cursor.execute(sql_select_query)\n",
     "    records = cursor.fetchall()\n",
-    "    logger.info(\"Matched \" + cursor.rowcount + \" record to : \" + name)\n",
+    "    logging.info(\"Matched \" + str(cursor.rowcount) + \" records to : \" + name)\n",
     "\n",
-    "    print(\"\\nPrinting each laptop record\")\n",
-    "    for row in records:\n",
-    "        print(\"Id = \", row[0], )\n",
-    "        print(\"Name = \", row[1])\n",
-    "        print(\"Price  = \", row[2])\n",
-    "        print(\"Purchase date  = \", row[3], \"\\n\")\n",
-    "    return ''\n",
+    "    if len(records) > 0:\n",
+    "        countries = []\n",
+    "        for row in records:\n",
+    "            if row[3] not in countries:\n",
+    "                countries.append(row[3])\n",
+    "        return countries\n",
+    "    else:\n",
+    "        return ['unknown']\n",
     "\n",
     "def get_geonames(name, country_hint):\n",
     "    '''\n",
@@ -313,6 +322,7 @@
     "        return 'Unknown', 'Unknown'\n",
     "    \n",
     "    response = ''\n",
+    "    countries = []\n",
     "    if location_data == LocationData.WEB_SERVICES:\n",
     "        # use the geonames web service\n",
     "        params = { 'q': name,\n",
@@ -327,21 +337,20 @@
     "                          resp.status_code + \n",
     "                          \") searching for: \" + name)\n",
     "            return 'Invalid', 'Invalid'\n",
-    "        response = json.loads(resp.text)\n",
+    "        \n",
+    "        response = json.loads(resp.text) \n",
+    "        # Extract city and country\n",
+    "        try:    \n",
+    "            for names in response['geonames']:\n",
+    "                if (name == names['name']):\n",
+    "                    countries.append(names['countryName'])              \n",
+    "        except KeyError:\n",
+    "            logging.error(\"KeyError detected searching for: \" + name)\n",
+    "            return 'Unknown', 'Unknown'\n",
     "    else:\n",
     "        # use local database\n",
-    "        response = query_db(name)\n",
-    "        \n",
-    "    # Extract city and country\n",
-    "    countries = []\n",
-    "    try:    \n",
-    "        for names in response['geonames']:\n",
-    "            if (name == names['name']):\n",
-    "                countries.append(names['countryName'])\n",
-    "    except KeyError:\n",
-    "        logging.error(\"KeyError detected searching for: \" + name)\n",
-    "        return 'Unknown', 'Unknown'\n",
-    "    \n",
+    "        countries = query_db(name, country_hint) \n",
+    "\n",
     "    if len(countries) > 0:\n",
     "        if country_hint in countries:\n",
     "            return name, country_hint\n",
@@ -448,7 +457,6 @@
     "    # If there is the word 'in' in the text then assume the words after refer to a location\n",
     "    # take up to sequence_length of those words to match to a location in the geonames database\n",
     "    if 'in' in words:\n",
-    "        print('using in')\n",
     "        pos = words.index('in')\n",
     "        pos = pos + 1\n",
     "        if len(words) > pos + sequence_length - 1:\n",
@@ -482,7 +490,7 @@
     "        return place, country\n",
     "    else:\n",
     "        logging.warning(\"Location not found in geonames: \" + text)\n",
-    "        return 'Unknown', 'UNknown'\n",
+    "        return 'Unknown', 'Unknown'\n",
     "\n",
     "\n",
     "def get_location(text: str, country_hint: str):\n",
@@ -548,7 +556,7 @@
     "                                            \"Countries\" : [country],\n",
     "                                            \"Cities\" : [place]}, ignore_index=True)\n",
     "    elif indicators_regexp.search(text):  #May need to make the analysis more sophisticated\n",
-    "        location = get_location(utext)\n",
+    "        place, country = get_location(utext, country_hint)\n",
     "        illness_data = illness_data.append({\"Headlines\" : [text],\n",
     "                                            \"Countries\" : [country],\n",
     "                                            \"Cities\" : [place]}, ignore_index=True)\n",
@@ -561,13 +569,13 @@
     "    Read a headlines file and check whether the headline relates to illnesses/deseases of interest.\n",
     "    \"\"\"\n",
     "    print(\"Reading lines from \" + filename)\n",
-    "    print(geonames_info())\n",
-    "    logging.info(geonames_info())\n",
     "    file = open(filename, 'r')\n",
     "    if location_data == LocationData.LOCAL_DB:\n",
-    "        open_db_connection():\n",
+    "        open_db_connection()\n",
     "    for line in file:\n",
     "        add_headline(line.strip())\n",
+    "    if location_data == LocationData.LOCAL_DB:\n",
+    "        close_db_connection()\n",
     "    file.close()\n",
     "\n",
     "def main():\n",
