--- a/parse_news_headlines.ipynb
+++ b/parse_news_headlines.ipynb
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -113,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -234,7 +234,8 @@
     "            cursor = connection.cursor()\n",
     "            cursor.execute(\"select database();\")\n",
     "            record = cursor.fetchone()\n",
-    "       \n",
+    "            cursor.close()\n",
+    "            \n",
     "        return\n",
     "        \n",
     "    except Error as e:\n",
@@ -256,8 +257,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
-   "metadata": {},
+   "execution_count": 49,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -266,28 +269,43 @@
       "Reading lines from ../data/headlines.txt\n",
       "Connected to MySQL Server version  5.7.21\n",
       "MySQL connection closed\n",
-      "                                        Headlines   Countries        Cities\n",
-      "0  [ï»¿More Zika patients reported in Fort Worth]  [Zimbabwe]  [Fort Worth]\n"
+      "                                    Headlines Countries    Cities\n",
+      "0  [﻿Dallas man comes down with case of Zika]   [Sudan]  [Dallas]\n",
+      "1  [﻿Dallas man comes down with case of Zika]   [Sudan]  [Dallas]\n"
      ]
     }
    ],
    "source": [
     "def query_db(name: str, country_hint):\n",
     "    global connection\n",
-    "    sql_select_query = \"select g.name, g.latitude, g.longitude, c.name from geoname g inner join countryinfo c on c.iso_alpha2 = g.country where g.name = '\" + name + \"'\"\n",
-    "    cursor = connection.cursor()\n",
-    "    cursor.execute(sql_select_query)\n",
+    "    # Remove apostrophes as they confuse the SQL query\n",
+    "    if name.find(\"'\") != -1:\n",
+    "        place = name.split(\"'\")[0]\n",
+    "    else:\n",
+    "        place = name\n",
+    "    sql_select_query = \"select g.name, g.latitude, g.longitude, c.name \" \n",
+    "    sql_select_query += \"from geoname g inner join countryinfo c \"\n",
+    "    sql_select_query += \"on c.iso_alpha2 = g.country where g.name = '\" + place + \"'\"\n",
+    "    try:\n",
+    "        cursor = connection.cursor()\n",
+    "        cursor.execute(sql_select_query)\n",
+    "    except mysql.connector.Error as e:\n",
+    "        logging.error(\"SQL error: \" + str(e))\n",
+    "        logging.error(\"When executing: \" + sql_select_query)\n",
+    "        cursor.close()\n",
+    "        return 'Unknown', ['Unknown']\n",
+    "    \n",
     "    records = cursor.fetchall()\n",
-    "    logging.info(\"Matched \" + str(cursor.rowcount) + \" records to : \" + name)\n",
-    "\n",
+    "    cursor.close()\n",
+    "    \n",
     "    if len(records) > 0:\n",
     "        countries = []\n",
     "        for row in records:\n",
     "            if row[3] not in countries:\n",
     "                countries.append(row[3])\n",
-    "        return countries\n",
+    "        return place, countries\n",
     "    else:\n",
-    "        return ['unknown']\n",
+    "        return 'Unknown', ['Unknown']\n",
     "\n",
     "def get_geonames(name, country_hint):\n",
     "    '''\n",
@@ -322,6 +340,7 @@
     "        return 'Unknown', 'Unknown'\n",
     "    \n",
     "    response = ''\n",
+    "    place = ''    \n",
     "    countries = []\n",
     "    if location_data == LocationData.WEB_SERVICES:\n",
     "        # use the geonames web service\n",
@@ -339,23 +358,25 @@
     "            return 'Invalid', 'Invalid'\n",
     "        \n",
     "        response = json.loads(resp.text) \n",
+    "\n",
     "        # Extract city and country\n",
     "        try:    \n",
     "            for names in response['geonames']:\n",
     "                if (name == names['name']):\n",
+    "                    place = name\n",
     "                    countries.append(names['countryName'])              \n",
     "        except KeyError:\n",
     "            logging.error(\"KeyError detected searching for: \" + name)\n",
     "            return 'Unknown', 'Unknown'\n",
     "    else:\n",
     "        # use local database\n",
-    "        countries = query_db(name, country_hint) \n",
+    "        place, countries = query_db(name, country_hint) \n",
     "\n",
     "    if len(countries) > 0:\n",
     "        if country_hint in countries:\n",
-    "            return name, country_hint\n",
+    "            return place, country_hint\n",
     "        else:\n",
-    "            return name, countries[0]\n",
+    "            return place, countries[0]\n",
     "    return 'Unknown', 'Unknown'\n",
     "\n",
     "\n",
@@ -449,7 +470,10 @@
     "    A place : string\n",
     "        The name of a place (typically a city).\n",
     "    A country : string\n",
-    "        The name of the country containing the city.\n",
+    "        The name of the country containing the city. It is expected that when reading \n",
+    "        actual news sources that a country name can be assumed from the actual source\n",
+    "        of the news headline otherwise there is no way to disambiguate cities with\n",
+    "        the same name from differnet parts of the world.\n",
     "\n",
     "    '''\n",
     "    words = text.split() #split the sentence into individual words\n",
@@ -569,7 +593,7 @@
     "    Read a headlines file and check whether the headline relates to illnesses/deseases of interest.\n",
     "    \"\"\"\n",
     "    print(\"Reading lines from \" + filename)\n",
-    "    file = open(filename, 'r')\n",
+    "    file = open(filename, 'r', encoding='utf-8')\n",
     "    if location_data == LocationData.LOCAL_DB:\n",
     "        open_db_connection()\n",
     "    for line in file:\n",
