--- a/parse_news_headlines.ipynb
+++ b/parse_news_headlines.ipynb
@@ -15,23 +15,24 @@
     "\n",
     "This script uses 3 alternatives for extracting location names:\n",
     "\n",
-    "1. A regular exression only\n",
+    "1. The geonames cache\n",
     "2. A local instance of MySQL which has had the geonames data installed\n",
     "3. The Geonames services which is accessed using a REST based API call\n",
     "\n",
     "\n",
     "# Obtaining Geonames Data\n",
     "\n",
-    "The geonames dataset is used to provide a respository of location names from around the world.  You can access Geonames data using the geonamescahce library. If using anaconda the conda import for this data is not compatable with python 3 and so the following pip install needs to be used to install the library *pip install geonamescache*. Similar comments apply to the unidecode library.\n",
+    "The geonames dataset is used to provide a respository of location names from around the world.   There are several ways to access geonames data:\n",
     "\n",
-    "Use of geonamescache may hit constraints in Jupyter Notebook. You can adjust some Jupyter Notebook parameters or consider two alternative approaches:\n",
-    "\n",
+    "* install the geonamescahce locally\n",
     "* use the geonames webservices REST API or \n",
-    "* doanload the geonames data and instantiate a local database. This is easy to do and well documented online.\n",
+    "* download the geonames data and instantiate a local database.\n",
+    "\n",
+    "You can access Geonames data by installing the geonamescahce library. If using anaconda the conda import for this data is not compatable with python 3 and so the following pip install needs to be used to install the library: *pip install geonamescache* (similar comments apply to the unidecode library).\n",
     "\n",
     "To access the online webservices API use the unencrypted URI http://api.geonames.org/search which is provided below in the *genamesapi* variable in the parameters cell. Accessing the online service is easy and efficient. There are two versions: a free version and a paid for version. The free version limits the number of requests to 1000 per hour. If you exceed this limit your requests are throttled. The paid for service does not have this constraint, but then its a paid for service!\n",
     "\n",
-    "To access the data locally I found the easiest way to do this was to add the data to a local database, in my case a MySQL database. The instructions are given in http://codigofuerte.github.io/GeoNames-MySQL-DataImport/downloading_data.html\n",
+    "You can access through a local database in my case a MySQL database using the instructions given in http://codigofuerte.github.io/GeoNames-MySQL-DataImport/downloading_data.html\n",
     "\n",
     "The processes is quite straight forward:\n",
     "* download the files from the above github repro above (geonames_importer.sh, admin1CodesASCII.txt, allCountries.txt etc)\n",
@@ -41,14 +42,12 @@
     "* import the data using the script (geonames_importer.sh)\n",
     "\n",
     "The download script will unzip the original files downloaded from geonames in a folder called \"data\". This folder will contain all the data needed for the \"import-dump\" action which populates the database.\n",
-    "\n",
-    "The local data version of the geonames interface developed in this nootebook uses the local MySQL database to emulate the same kind of interface that is provided by the web service.\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -75,20 +74,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
     "log_file = 'headlines.log'                       # Log file location and name\n",
-    "headlines_file = \"../data/headlines.txt\"         # Test headlines files location\n",
+    "headlines_file = \"../data/headlines0.txt\"         # Test headlines files location\n",
     "log_level = logging.INFO                         # Log level to generate log out for\n",
     "sequence_length = 5                              # Sequence of words to check as location name\n",
     "geonamesapi = 'http://api.geonames.org/search'   # geonames API URI\n",
     "class LocationData(Enum):                        # Options for location data: \n",
     "    WEB_SERVICES = 1                             # - Use geonames web service\n",
     "    LOCAL_DB = 2                                 # - Use local db with geonames data\n",
-    "    REGEXP = 3                                   # - Use regexp\n",
-    "location_data = LocationData.LOCAL_DB        # Selected source of location data\n",
+    "    CACHE = 3                                    # - Use geonamescache\n",
+    "    REGEXP = 4                                   # - Use regexp\n",
+    "location_data = LocationData.CACHE               # Selected source of location data\n",
     "\n",
     "#################################################################################\n",
     "# Create a personal user name on geonames to use the web api                    #\n",
@@ -113,13 +113,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "[{'geonameid': 4164138, 'name': 'Miami', 'latitude': 25.77427, 'longitude': -80.19366, 'countrycode': 'US', 'population': 441003, 'timezone': 'America/New_York', 'admin1code': 'FL'}]\n",
+      "[{'geonameid': 6252001, 'name': 'United States', 'iso': 'US', 'iso3': 'USA', 'isonumeric': 840, 'fips': 'US', 'continentcode': 'NA', 'capital': 'Washington', 'areakm2': 9629091, 'population': 310232863, 'tld': '.us', 'currencycode': 'USD', 'currencyname': 'Dollar', 'phone': '1', 'postalcoderegex': '^\\\\d{5}(-\\\\d{4})?$', 'languages': 'en-US,es-US,haw,fr', 'neighbours': 'CA,MX,CU'}]\n",
       "Zika|Flu|Mad Cow|Meningitis|Cholera|Measles|Gonorrhea|Rabies|Malaria|Respiratory Syncytial|Bronchitis|Hepatitis|Dengue|Influenza|Ebola|Tuberculosis|Norovirus|HIV|Cholera|Pneumonia|Rhinovirus|Rotavirus|Mumps|Gonorrhea|Syphilis|Chikungunya|Chickenpox|Chlamydia|Varicella|Varicella|Herpes\n",
       "pandemic|virus|disease|eipdemic|vaccine\n"
      ]
@@ -157,9 +159,10 @@
     "# (cities/districts/counrties)                                    #\n",
     "###################################################################\n",
     "gc = geonamescache.GeonamesCache()\n",
-    "cities = gc.get_cities()\n",
-    "countries = gc.get_countries_by_names()\n",
-    "# print(cities) # breaks Jupyter notebook \n",
+    "cities = [city for city in gc.get_cities().values() if city['name'] == 'Miami']\n",
+    "countries = [country for country in gc.get_countries().values() if country['name'] == 'United States'] \n",
+    "print(cities) \n",
+    "print(countries) \n",
     "\n",
     "###################################################################\n",
     "# Define punctation                                               #\n",
@@ -257,7 +260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 41,
    "metadata": {
     "scrolled": true
    },
@@ -266,17 +269,105 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Reading lines from ../data/headlines.txt\n",
-      "Connected to MySQL Server version  5.7.21\n",
-      "MySQL connection closed\n",
-      "                                    Headlines Countries    Cities\n",
-      "0  [﻿Dallas man comes down with case of Zika]   [Sudan]  [Dallas]\n",
-      "1  [﻿Dallas man comes down with case of Zika]   [Sudan]  [Dallas]\n"
+      "Reading lines from ../data/headlines0.txt\n",
+      "                                              Headlines        Countries  \\\n",
+      "0               [More Zika patients reported in Indang]    [Philippines]   \n",
+      "1     [Suva authorities confirmed the spread of Rota...           [Fiji]   \n",
+      "2          [More Zika patients reported in Bella Vista]      [Argentina]   \n",
+      "3                      [Zika Outbreak in Wichita Falls]  [United States]   \n",
+      "4                            [Zika Outbreak Hits Miami]  [United States]   \n",
+      "...                                                 ...              ...   \n",
+      "1259        [More Zika patients reported in Fort Worth]  [United States]   \n",
+      "1260           [Zika symptoms spotted in Boynton Beach]  [United States]   \n",
+      "1261                   [Outbreak of Zika in Portoviejo]        [Ecuador]   \n",
+      "1262                     [Influenza Exposure in Muscat]           [Oman]   \n",
+      "1263  [Rumors about Rabies spreading in Jerusalem ha...         [Israel]   \n",
+      "\n",
+      "               Cities  \n",
+      "0            [Indang]  \n",
+      "1              [Suva]  \n",
+      "2       [Bella Vista]  \n",
+      "3     [Wichita Falls]  \n",
+      "4             [Miami]  \n",
+      "...               ...  \n",
+      "1259     [Fort Worth]  \n",
+      "1260  [Boynton Beach]  \n",
+      "1261     [Portoviejo]  \n",
+      "1262         [Muscat]  \n",
+      "1263      [Jerusalem]  \n",
+      "\n",
+      "[1264 rows x 3 columns]\n"
      ]
     }
    ],
    "source": [
+    "def query_cache(name: str, country_hint):\n",
+    "    '''\n",
+    "    Returns a location that has been matched in the geonamescache along with the associated\n",
+    "    countries. \n",
+    "    A 'countryHint' parameter provides help in resolving ambiguities where there are more than one \n",
+    "    location in the geonames database matching the parameter 'name'. If several names in geonames \n",
+    "    match the name parameter then all countries containing those locations are captured. \n",
+    "\n",
+    "    Parameters\n",
+    "    ----------\n",
+    "    name : string\n",
+    "        The name or a sequence of names being matched to the geonames repositorry.\n",
+    "    country_hint : string\n",
+    "        Used as the name of the country in order to resolve ambiguities and \n",
+    "        asumed to be determined from  context.\n",
+    "\n",
+    "    Returns\n",
+    "    -------\n",
+    "    string\n",
+    "        The name of the City when a match is made or 'Unknown' in the absence \n",
+    "        of a match or 'Invalid' when an error has been found.\n",
+    "    string\n",
+    "        A list of corresponding countreis or 'Unknown' in the absence \n",
+    "        of a match.  \n",
+    "    '''\n",
+    "    # Remove apostrophes as they confuse the SQL query\n",
+    "    if name.find(\"'\") != -1:\n",
+    "        place = name.split(\"'\")[0]\n",
+    "    else:\n",
+    "        place = name\n",
+    "    city = [(city['name'], city['latitude'], city['longitude']) \n",
+    "            for city in gc.get_cities().values() \n",
+    "              if city['name'] == place]\n",
+    "    countrycodes = [city['countrycode'] for city in gc.get_cities().values() \n",
+    "              if city['name'] == place]\n",
+    "    \n",
+    "    if city != ():\n",
+    "        countries = [country['name'] for country in gc.get_countries().values() \n",
+    "                     if country['iso'] in countrycodes ] \n",
+    "        return place, countries\n",
+    "    return 'Unknown', 'Unknown'\n",
+    "    \n",
     "def query_db(name: str, country_hint):\n",
+    "    '''\n",
+    "    Returns a location that has been matched in a local database with\n",
+    "    geonames data along with the associated countries. \n",
+    "    A 'countryHint' parameter provides help in resolving ambiguities where there are more than one \n",
+    "    location in the geonames database matching the parameter 'name'. If several names in geonames \n",
+    "    match the name parameter then all countries containing those locations are captured. \n",
+    "\n",
+    "    Parameters\n",
+    "    ----------\n",
+    "    name : string\n",
+    "        The name or a sequence of names being matched to the geonames repositorry.\n",
+    "    country_hint : string\n",
+    "        Used as the name of the country in order to resolve ambiguities and \n",
+    "        asumed to be determined from  context.\n",
+    "\n",
+    "    Returns\n",
+    "    -------\n",
+    "    string\n",
+    "        The name of the City when a match is made or 'Unknown' in the absence \n",
+    "        of a match or 'Invalid' when an error has been found.\n",
+    "    string\n",
+    "        A list of corresponding countreis or 'Unknown' in the absence \n",
+    "        of a match.  \n",
+    "    '''\n",
     "    global connection\n",
     "    # Remove apostrophes as they confuse the SQL query\n",
     "    if name.find(\"'\") != -1:\n",
@@ -342,7 +433,9 @@
     "    response = ''\n",
     "    place = ''    \n",
     "    countries = []\n",
-    "    if location_data == LocationData.WEB_SERVICES:\n",
+    "    if location_data == LocationData.CACHE:\n",
+    "        place, countries = query_cache(name, country_hint)  \n",
+    "    elif location_data == LocationData.WEB_SERVICES:\n",
     "        # use the geonames web service\n",
     "        params = { 'q': name,\n",
     "                   'maxrows': '100',\n",
@@ -376,6 +469,7 @@
     "        if country_hint in countries:\n",
     "            return place, country_hint\n",
     "        else:\n",
+    "            # Choose any\n",
     "            return place, countries[0]\n",
     "    return 'Unknown', 'Unknown'\n",
     "\n",
@@ -538,6 +632,9 @@
     "    '''\n",
     "    text = purge_punctuation(text)\n",
     "    if location_data == LocationData.REGEXP:\n",
+    "        ################################################\n",
+    "        # For experimenting with regular expressions ...\n",
+    "        ################################################\n",
     "        locations = locations_regexp.search(text)\n",
     "        if locations:\n",
     "            return locations.group(1), 'Unknown'\n",
